tests/fixtures/invalid/err007_dynamic_isolation_violation.rex
use.instead:python as $out {
  import rex-core
  print('x')
}
